[package]
name = "dwarf"
version = "0.1.0"
authors = ["Keith T. Star <uberfoo@me.com>"]
categories = ["compilers"]
description = "A Rust-like, typed, interpreted programming language"
documentation = "https://uberfoo.github.io/assets/docs/dwarf/introduction.html"
homepage = "https://uberfoo.github.io/assets/docs/dwarf/introduction.html"
include = [
    "build.rs",
    "src/**/*.rs",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]
keywords = ["dwarf", "language", "interpreter", "compiler"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uberfoo/dwarf"
edition = "2021"

[[bin]]
name = "dwarfc"
path = "src/bin/dwarfc.rs"

[[bin]]
name = "dwarf"
path = "src/bin/main.rs"

[[bin]]
name = "dwarfdb"
path = "src/bin/tui.rs"

[dependencies]
ansi_term = "0.12.1"
ansi-to-tui = { git = "https://github.com/uberFoo/ansi-to-tui" }
ariadne = "0.2.0"
backtrace = "0.3.67"
bincode = "1.3.3"
cfg-if = "1.0.0"
circular-queue = "0.2.6"
clap = { version = "4.2.2", features = ["derive"] }
chumsky = "0.9.2"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossterm = "0.26.1"
dap = "0.2.0-alpha1"
derivative = "2.2.0"
env_logger = "0.10.0"
fnv = "1.0.7"
fxhash = "0.2.1"
heck = "0.4.1"
hyper = { version = "0.14.26", optional = true }
lazy_static = "1.4.0"
log = "0.4.18"
no_deadlocks = { git = "https://github.com/uberFoo/no-deadlocks" }
num-format = "0.4.4"
parking_lot = { version = "0.12.1", features = [
    "serde",
    "deadlock_detection",
    "hardware-lock-elision",
] }
pretty_env_logger = "0.4.0"
ratatui = { git = "https://github.com/uberFoo/ratatui" }
rayon = "1.7.0"
rustyline = { version = "11.0.0", optional = true, features = [
    "derive",
    "with-file-history",
] }
sarzak = { git = "https://github.com/uberFoo/sarzak", default-features = false, branch = "develop" }
# sarzak = { path = "../sarzak", default-features = false }
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
snafu = "0.7.4"
syntect = "5.0.0"
tokio = { version = "1.28.2", features = ["macros", "rt"], optional = true }
tracing = { version = "0.1.37", features = ["log"], optional = true }
tracy-client = { version = "0.15.2", default-features = false }
tui-input = "0.7.1"
tui-logger = { git = "https://github.com/uberFoo/tui-logger", default-features = false, features = [
    "ratatui-support",
] }
tui-textarea = { git = "https://github.com/uberFoo/tui-textarea", features = [
    "ratatui-crossterm",
] }
tui-tree-widget = { git = "https://github.com/uberFoo/tui-rs-tree-widget" }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
tests = "0.0.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
diff = "0.1.13"

[[bench]]
name = "dwarf"
harness = false

[features]
default = ["single-vec", "repl", "print-std-out"]

repl = ["dep:rustyline"]

tracy = ["tracy-client/enable", "tracy-client/system-tracing", "tracy-client/context-switch-tracing", "tracy-client/sampling", "tracy-client/code-transfer", "tracy-client/broadcast"]


single = ["sarzak/lu-dog-rc"]
multi = ["multi-std-rwlock"]
single-vec = ["sarzak/lu-dog-vec"]
multi-vec = ["sarzak/lu-dog-rwlock-vec"]
multi-std-mutex = []
multi-std-rwlock = ["sarzak/lu-dog-rwlock"]
multi-parking-lot-mutex = ["sarzak/lu-dog-pl-mutex"]
multi-parking-lot-rwlock = []
print-std-out = []
