[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.2"
dwarf = { path = "../../" }
sarzak = { git = "https://github.com/uberFoo/sarzak", default-features = false, branch = "develop" }
serde = "1.0.176"
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4"] }

[patch."https://github.com/uberFoo/sarzak"]
sarzak = { path = "../../../sarzak" }

[lib]
name = "sarzak"
crate-type = ["cdylib"]
