[package]
name = "http_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.2"
bincode = "1.3.3"
dwarf = { path = "../../" }
heck = "0.4.1"
log = "0.4.19"
reqwest = { version = "0.11.22", features = ["json"] }
rustc-hash = "1.1.0"
serde = "1.0.176"
serde_json = "1.0.104"
tracy-client = "0.15.2"
uuid = { version = "1.4.1", features = ["v4"] }

# Sarzak should not be necessary. It's doing something to support the dwarf build,
# which is weird.
sarzak = { git = "https://github.com/uberFoo/sarzak", branch = "develop", default-features = false, features = [
    "sarzak-rwlock",
] }

[patch."https://github.com/uberFoo/sarzak"]
sarzak = { path = "../../../sarzak" }

[lib]
name = "http_client"
crate-type = ["cdylib"]
