[package]
name = "lu_dog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.2"
bincode = "1.3.3"
dwarf = { path = "../../" }
heck = "0.4.1"
log = "0.4.19"
rustc-hash = "1.1.0"
sarzak = { git = "https://github.com/uberFoo/sarzak", branch = "develop", default-features = false, features = [
    "sarzak-rwlock",
] }
serde = "1.0.176"
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4"] }

[patch."https://github.com/uberFoo/sarzak"]
sarzak = { path = "../../../sarzak" }

[lib]
name = "lu_dog"
crate-type = ["cdylib"]
