[package]
name = "run_dwarf_async"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.2.0"
ansi_term = "0.12.1"
ansi-to-html = "0.1.3"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
dwarf = { path = "../../../", default-features = false, features = [
    "single",
    "repl",
] }
hyper = "0.14.26"
lambda_http = { version = "0.8.0", default-features = false, features = [
    "apigw_http",
] }
lambda_runtime = "0.8.0"
# lambda_runtime = { path = "../../../../../github/aws-lambda-rust-runtime/lambda-runtime" }
serde_json = "1.0.99"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
